@@ -1185,6 +1185,7 @@ Eric Desamore <Eric.Desamore@idtv.bull.net>
 John Ashmun <John.ASHMUN@esca.com>
 Przemyslaw Marciniak <pmarciniak@lucent.com>
 Boris Kolpackov <bosk@ipmce.ru>
+Carsten Madsen <com@navicon.dk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
